# signals_agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  studio_input.example.json
app/: config.py  main.py
client/: Dockerfile  package-lock.json  package.json  tsconfig.tsbuildinfo
server/: Dockerfile  alembic.ini  langgraph.json  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0001_users.py  0002_projects.py  0003_agent_sessions.py  0004_oauth.py
server/app/: config.py  database.py  main.py
server/app/dependencies/: __init__.py  auth.py
server/app/destinations/: __init__.py  exceptions.py  loader.py  protocol.py  register.py  registry.py  spec.py
server/app/destinations/config/: google_customer_match.yaml  google_offline_conversions.yaml
server/app/destinations/connectors/: __init__.py  meta_capi.py
server/app/graph/: checkpoint.py  graph.py  handlers.py  llm.py  routers.py  state.py  validators.py  validators_helpers.py  welcome.py
server/app/graph/handlers/: __init__.py  catalogs.py  common.py  intent.py  scope.py
server/app/graph/nodes/: __init__.py  intent_capture.py  intent_clarify.py  scope_guard.py
server/app/graph/prompts/: __init__.py  intent.py  scope.py
server/app/graph/validators/: __init__.py  common.py  intent_capture.py  intent_clarify.py  scope.py
server/app/internal/: canonical.py  modal.py  signal_type.py
server/app/internal/config/: canonical.yaml
server/app/models/: __init__.py  agent_session.py  connections.py  project.py  user.py
server/app/routers/: auth.py  copilotkit.py  projects.py  sessions.py
server/app/schemas/: __init__.py  auth.py  project.py  session.py
server/app/services/: auth_service.py
server/app/sources/: __init__.py  loader.py  protocol.py  register.py  registry.py
server/app/sources/config/: zoho.yaml
server/app/sources/connectors/: salesforce.py
server/tests/: conftest.py  test_auth.py  test_checkpointer.py  test_copilotkit.py  test_destinations.py  test_graph.py  test_intent.py  test_intent_capture_node.py  test_intent_clarify_node.py  test_oauth_tables.py  test_projects.py  test_scope_guard_node.py  test_scope_validate.py  test_sessions.py  test_sources.py
tests/: test_catalog.py  (+2 more)
(+114 files in other folders)
