[project]
name = "signals-langraph-agent"
version = "0.1.0"
description = "LangGraph agent for Signals — local dev with LangSmith Studio"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langsmith>=0.4.0",
    "pydantic-settings>=2.8.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.1.55",
    "pytest>=8.0.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]
